force-app/main/default/objects/Race__c/fields/Circuit__c.field-meta.xml
<CustomField>
    <fullName>Circuit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Circuit</label>
    <referenceTo>Circuit__c</referenceTo>
    <relationshipLabel>Races</relationshipLabel>
    <relationshipName>Races</relationshipName>
    <type>Lookup</type>
</CustomField>