force-app/main/default/objects/Race__c/fields/Distance__c.field-meta.xml
<CustomField>
    <fullName>Distance__c</fullName>
    <label>Distance</label>
    <length>30</length>
    <type>Text</type>
</CustomField>