force-app/main/default/objects/Race__c/fields/Fastest_Lap__c.field-meta.xml
<CustomField>
    <fullName>Fastest_Lap__c</fullName>
    <label>Fastest Lap</label>
    <length>100</length>
    <type>Text</type>
</CustomField>