force-app/main/default/objects/Race__c/fields/Pitstop__c.field-meta.xml
<CustomField>
    <fullName>Pitstop__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pitstop</label>
    <referenceTo>Pitstop__c</referenceTo>
    <relationshipLabel>Races</relationshipLabel>
    <relationshipName>Races</relationshipName>
    <type>Lookup</type>
</CustomField>