force-app/main/default/objects/Race__c/fields/Results__c.field-meta.xml
<CustomField>
    <fullName>Results__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Results</label>
    <referenceTo>Results__c</referenceTo>
    <relationshipLabel>Races</relationshipLabel>
    <relationshipName>Races</relationshipName>
    <type>Lookup</type>
</CustomField>