force-app/main/default/objects/Race__c/fields/Season__c.field-meta.xml
<CustomField>
    <fullName>Season__c</fullName>
    <label>Season</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>