force-app/main/default/objects/Race__c/fields/StartingGrid__c.field-meta.xml
<CustomField>
    <fullName>StartingGrid__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>StartingGrid</label>
    <referenceTo>StartingGrid__c</referenceTo>
    <relationshipLabel>Races</relationshipLabel>
    <relationshipName>Races</relationshipName>
    <type>Lookup</type>
</CustomField>